# isc-playground

./: .envrc  .gitignore  isc-playground.py  plain_python_test.py  pyproject.toml
notebooks/: test_eeg_hypyp.ipynb
src/: composite-stimuli-features.py  load_eeg.py
