[project]
name = "isc-playground"
version = "0.1.0"
description = "Try out inter-subject correlation for fun and profit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "autoreject>=0.4.3",
    "certifi>=2025.1.31",
    "hypyp>=0.5.0b15",
    "importlib-resources>=6.5.2",
    "ipyfilechooser>=0.6.0",
    "ipykernel>=7.1.0",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.8",
    "meshio>=5.3.5",
    "mistune>=3.1.4",
    "mne-icalabel>=0.8.1",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.3.3.251201",
    "pillow>=11.1.0",
    "pywavelets>=1.9.0",
    "pyxdf>=1.17.0",
    "requests>=2.32.3",
    "rqa-analysis",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "snirf>=0.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.1",
    "tqdm>=4.67.1",
    "urllib3>=2.3.0",
    "uvloop>=0.22.1",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
rqa-analysis = { git = "https://github.com/xkiwilabs/Recurrence-Quantification-Analysis.git" }
